crates/fulgur-chart/tests/snapshots/inspect_model__snapshot_bar_model.snap
---
source: crates/fulgur-chart/tests/inspect_model.rs
expression: "model_yaml(\"bar\")"
---
meta:
  type: bar
  width: 800
  height: 450
axes:
  x:
    kind: category
    labels:
      - Jan
      - Feb
      - Mar
      - Apr
      - May
  y:
    kind: linear
    min: 0
    max: 300
    step: 50
    ticks:
      - 0
      - 50
      - 100
      - 150
      - 200
      - 250
      - 300
series:
  - label: Revenue (10k JPY)
    fill:
      - "rgba(54,162,235,1)"
    stroke:
      - "rgba(0,0,0,0.1)"
    values:
      - 120
      - 200
      - 150
      - 280
      - 240
counts:
  datasets: 1
  legend_items: 1
  x_ticks: 5
  y_ticks: 7
geometry:
  plot_area:
    x: 0.04747499942779541
    y: 0.15200000000000002
    w: 0.9425250005722046
    h: 0.7813333333333334
  elements:
    - series: 0
      index: 0
      kind: bar
      nx: 0.019999999999999993
      ny: 0.6
      nw: 0.14400000000000002
      nh: 0.4
    - series: 0
      index: 1
      kind: bar
      nx: 0.21999999999999997
      ny: 0.33333333333333337
      nw: 0.14400000000000002
      nh: 0.6666666666666666
    - series: 0
      index: 2
      kind: bar
      nx: 0.41999999999999993
      ny: 0.5
      nw: 0.14400000000000002
      nh: 0.5
    - series: 0
      index: 3
      kind: bar
      nx: 0.6199999999999999
      ny: 0.06666666666666665
      nw: 0.14400000000000002
      nh: 0.9333333333333333
    - series: 0
      index: 4
      kind: bar
      nx: 0.82
      ny: 0.19999999999999996
      nw: 0.14400000000000002
      nh: 0.8
