crates/fulgur-chart/tests/snapshots/inspect_model__snapshot_line_model.snap
---
source: crates/fulgur-chart/tests/inspect_model.rs
expression: "model_yaml(\"line\")"
---
meta:
  type: line
  width: 800
  height: 450
axes:
  x:
    kind: category
    labels:
      - Mon
      - Tue
      - Wed
      - Thu
      - Fri
      - Sat
      - Sun
  y:
    kind: linear
    min: 12
    max: 28
    step: 2
    ticks:
      - 12
      - 14
      - 16
      - 18
      - 20
      - 22
      - 24
      - 26
      - 28
series:
  - label: Tokyo
    fill:
      - "rgba(0,0,0,0.1)"
    stroke:
      - "rgba(255,99,132,1)"
    values:
      - 12
      - 15
      - 14
      - 18
      - 22
      - 25
      - 21
  - label: Osaka
    fill:
      - "rgba(0,0,0,0.1)"
    stroke:
      - "rgba(54,162,235,1)"
    values:
      - 14
      - 16
      - 17
      - 19
      - 24
      - 27
      - 23
counts:
  datasets: 2
  legend_items: 2
  x_ticks: 7
  y_ticks: 9
geometry:
  plot_area:
    x: 0.03914999961853027
    y: 0.15200000000000002
    w: 0.9372525000572205
    h: 0.7813333333333334
  elements:
    - series: 0
      index: 0
      kind: line
      nx: 0
      ny: 1
      nw: 0
      nh: 0
    - series: 0
      index: 1
      kind: line
      nx: 0.16666666666666666
      ny: 0.8125
      nw: 0
      nh: 0
    - series: 0
      index: 2
      kind: line
      nx: 0.3333333333333333
      ny: 0.875
      nw: 0
      nh: 0
    - series: 0
      index: 3
      kind: line
      nx: 0.5
      ny: 0.625
      nw: 0
      nh: 0
    - series: 0
      index: 4
      kind: line
      nx: 0.6666666666666666
      ny: 0.37500000000000006
      nw: 0
      nh: 0
    - series: 0
      index: 5
      kind: line
      nx: 0.8333333333333334
      ny: 0.18750000000000003
      nw: 0
      nh: 0
    - series: 0
      index: 6
      kind: line
      nx: 1
      ny: 0.4375
      nw: 0
      nh: 0
    - series: 1
      index: 0
      kind: line
      nx: 0
      ny: 0.875
      nw: 0
      nh: 0
    - series: 1
      index: 1
      kind: line
      nx: 0.16666666666666666
      ny: 0.7500000000000001
      nw: 0
      nh: 0
    - series: 1
      index: 2
      kind: line
      nx: 0.3333333333333333
      ny: 0.6875
      nw: 0
      nh: 0
    - series: 1
      index: 3
      kind: line
      nx: 0.5
      ny: 0.5625
      nw: 0
      nh: 0
    - series: 1
      index: 4
      kind: line
      nx: 0.6666666666666666
      ny: 0.24999999999999992
      nw: 0
      nh: 0
    - series: 1
      index: 5
      kind: line
      nx: 0.8333333333333334
      ny: 0.06250000000000006
      nw: 0
      nh: 0
    - series: 1
      index: 6
      kind: line
      nx: 1
      ny: 0.3125
      nw: 0
      nh: 0
