crates/fulgur-chart/tests/snapshots/inspect_model__snapshot_scatter_model.snap
---
source: crates/fulgur-chart/tests/inspect_model.rs
expression: "model_yaml(\"scatter\")"
---
meta:
  type: scatter
  width: 800
  height: 450
axes:
  x:
    kind: linear
    min: 10
    max: 40
    step: 5
    ticks:
      - 10
      - 15
      - 20
      - 25
      - 30
      - 35
      - 40
  y:
    kind: linear
    min: 4
    max: 24
    step: 2
    ticks:
      - 4
      - 6
      - 8
      - 10
      - 12
      - 14
      - 16
      - 18
      - 20
      - 22
      - 24
series:
  - label: Store A
    fill:
      - "rgba(54,162,235,1)"
    stroke:
      - "rgba(0,0,0,0.1)"
    values: []
  - label: Store B
    fill:
      - "rgba(255,99,132,1)"
    stroke:
      - "rgba(0,0,0,0.1)"
    values: []
counts:
  datasets: 2
  legend_items: 2
  x_ticks: 0
  y_ticks: 11
geometry:
  plot_area:
    x: 0.03914999961853027
    y: 0.15825387659073897
    w: 0.9508500003814697
    h: 0.8460057747834456
  elements:
    - series: 0
      index: 0
      kind: scatter
      nx: 0.06666666666666665
      ny: 1
      nw: 0
      nh: 0
    - series: 0
      index: 1
      kind: scatter
      nx: 0.26666666666666666
      ny: 0.85
      nw: 0
      nh: 0
    - series: 0
      index: 2
      kind: scatter
      nx: 0.5
      ny: 0.7500000000000001
      nw: 0
      nh: 0
    - series: 0
      index: 3
      kind: scatter
      nx: 0.6666666666666665
      ny: 0.5
      nw: 0
      nh: 0
    - series: 0
      index: 4
      kind: scatter
      nx: 0.7666666666666668
      ny: 0.5499999999999999
      nw: 0
      nh: 0
    - series: 0
      index: 5
      kind: scatter
      nx: 0.9333333333333333
      ny: 0.24999999999999992
      nw: 0
      nh: 0
    - series: 1
      index: 0
      kind: scatter
      nx: 0
      ny: 0.7500000000000001
      nw: 0
      nh: 0
    - series: 1
      index: 1
      kind: scatter
      nx: 0.2
      ny: 0.6
      nw: 0
      nh: 0
    - series: 1
      index: 2
      kind: scatter
      nx: 0.4
      ny: 0.65
      nw: 0
      nh: 0
    - series: 1
      index: 3
      kind: scatter
      nx: 0.6
      ny: 0.35
      nw: 0
      nh: 0
    - series: 1
      index: 4
      kind: scatter
      nx: 0.8333333333333335
      ny: 0.09999999999999991
      nw: 0
      nh: 0
    - series: 1
      index: 5
      kind: scatter
      nx: 1
      ny: 0
      nw: 0
      nh: 0
